<resources>
    <string name="app_name">ArduinoBluetoothController</string>
    <string name="no_bluetooth_device">Bluetooth is not supported by this unit</string>
    <string name="welcome_bluetooth">Welcome to the bluetooth setup. Choose a way to connect.</string>
    <string name="show_paired">Show paired devices</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="instructions">Write someting in the field below to send it to the selected bluetooth device</string>
    <string name="send_byte">Send byte</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="show_readings_and_settings">Show readings and settings</string>
    <string name="send_settings">Send settings</string>
    <string name="get_readings">Get readings</string>
    <string name="setpoint">Setpoint: %1$d</string>
    <string name="start_signal">Start signal: %1$d</string>
    <string name="running_signal">Running signal: %1$d</string>
    <string name="sum_alarm">Sum alarm: %1$d</string>
    <string name="pressure">Pressure: %1$d</string>
    <string name="current">Current: %1$d</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="list_of_paired_devices">List of paired devices</string>
</resources>
