<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewBTSettings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_settings" />

    <include android:id="@+id/chosenBluetoothDeviceView"
        layout="@layout/bluetooth_device"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_paired_devices" />

    <ListView
        android:id="@+id/pairedListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openBluetoothSettings"
        android:text="@string/search_for_devices" />

</LinearLayout>